syntax = "proto3";

package celestia.forwarding.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/forwarding/types";

// InterchainAccountsRouter ...
message InterchainAccountsRouter {
  // identifier
  string id = 1 [
    (gogoproto.customtype) = "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable)   = false
  ];
  // origin mailbox
  string origin_mailbox = 2 [
    (gogoproto.customtype) = "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable)   = false
  ];
  // ism identifier
  string ism_id = 3 [
    (gogoproto.customtype) = "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable)   = true
  ];
}
